--- a/app/index.html
+++ b/app/index.html
@@ -1,17 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Martplace</title>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
     <link rel="stylesheet" href="css/libs.min.css">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
+
 <body>
+
+    <header class="header">
+        <div class="container">
+            <div class="header__inner">
+                <div class="header__logo">
+                    <a href="#">
+                        <img src="images/logo.png" alt="">
+                        <div class="header__logo-text">
+                            <span>Mart</span>Place
+                        </div>
+                    </a>
+                </div>
+                <div class="header__box">
+                    <div class="header__box-button">
+                        <a href="#">Become a Seller</a>
+                    </div>
+                    <a class="notifications header__icon lnr lnr-alarm" href="#">
+                        <span>25</span>
+                    </a>
+                    <a class="messages header__icon lnr lnr-envelope" href="#">
+                        <span>6</span>
+                    </a>
+                    <a class="basket header__icon lnr lnr-cart" href="#">
+                        <span>2</span>
+                    </a>
+                    <a class="user" href="#">
+                        <div class="user__inner">
+                            <div class="user__images">
+                                <img src="images/content/user-login.jpg" alt="">
+                            </div>
+                            <div class="user__info">
+                                <div class="user__name">
+                                    Taofiq Hakim
+                                </div>
+                                <div class="user__money">
+                                    $20.45
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </header>
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/libs.min.js"></script>
-    <script src="js/main.min.js"></script>  
+    <script src="js/main.min.js"></script>
 </body>
+
 </html>
