--- a/app/index.html
+++ b/app/index.html
@@ -14,44 +14,72 @@
 <body>
 
     <header class="header">
-        <div class="container">
-            <div class="header__inner">
-                <div class="header__logo">
-                    <a href="#">
-                        <img src="images/logo.png" alt="">
-                        <div class="header__logo-text">
-                            <span>Mart</span>Place
-                        </div>
-                    </a>
-                </div>
-                <div class="header__box">
-                    <div class="header__box-button">
-                        <a href="#">Become a Seller</a>
+        <div class="header__top">
+            <div class="container">
+                <div class="header__top-inner">
+                    <div class="header__logo">
+                        <a href="#">
+                            <img src="images/logo.png" alt="">
+                            <div class="header__logo-text">
+                                <span>Mart</span>Place
+                            </div>
+                        </a>
                     </div>
-                    <a class="notifications header__icon lnr lnr-alarm" href="#">
-                        <span>25</span>
-                    </a>
-                    <a class="messages header__icon lnr lnr-envelope" href="#">
-                        <span>6</span>
-                    </a>
-                    <a class="basket header__icon lnr lnr-cart" href="#">
-                        <span>2</span>
-                    </a>
-                    <a class="user" href="#">
-                        <div class="user__inner">
-                            <div class="user__images">
-                                <img src="images/content/user-login.jpg" alt="">
-                            </div>
-                            <div class="user__info">
-                                <div class="user__name">
-                                    Taofiq Hakim
-                                </div>
-                                <div class="user__money">
-                                    $20.45
-                                </div>
-                            </div>
+                    <div class="header__box">
+                        <div class="header__box-button">
+                            <a href="#">Become a Seller</a>
                         </div>
-                    </a>
+                        <a class="notifications header__icon lnr lnr-alarm" href="#">
+                            <span>25</span>
+                        </a>
+                        <a class="messages header__icon lnr lnr-envelope" href="#">
+                            <span>6</span>
+                        </a>
+                        <a class="basket header__icon lnr lnr-cart" href="#">
+                            <span>2</span>
+                        </a>
+                        <a class="user" href="#">
+                            <div class="user__inner">
+                                <div class="user__images">
+                                    <img src="images/content/user-login.jpg" alt="">
+                                </div>
+                                <div class="user__info">
+                                    <div class="user__name">
+                                        Taofiq Hakim
+                                    </div>
+                                    <div class="user__money">
+                                        $20.45
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="header__menu">
+            <div class="container">
+                <div class="header__menu-content">
+                    <nav class="menu">
+                        <ul class="menu__list">
+                            <li><a href="#">HOME </a></li>
+                            <li><a href="#">all products</a></li>
+                            <li><a href="#">wordpress</a></li>
+                            <li><a href="#">festures</a></li>
+                            <li><a href="#">Pages</a></li>
+                        </ul>
+                    </nav>
+
+                    <div class="header__search">
+                        <form>
+                            <input type="text" placeholder="Search product here...">
+                            <button type="submit">
+                                <span class="lnr lnr-magnifier"></span>
+                            </button>
+
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
