--- a/app/index.html
+++ b/app/index.html
@@ -85,6 +85,40 @@
         </div>
     </header>
 
+    <section class="search">
+        <div class="container">
+            <div class="search__inner">
+                <div class="search__inner-title">
+                    Create Your Own
+                    <span>Digital Product Marketplace</span>
+                </div>
+                <div class="search__inner-text">
+                    MartPlace is the most powerful, & customizable template for Easy Digital Downloads Products
+                </div>
+                <div class="search__inner-box">
+                    <a href="#">View All Products</a>
+                    <a href="#">Popular Products</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="search__select">
+            <form>
+                <input type="text" placeholder="Search your products...">
+                <select>
+                    <option value="all">All Categories</option>
+                    <option value="item">item</option>
+                    <option value="item">item</option>
+                    <option value="item">item</option>
+                    <option value="item">item</option>
+                </select>
+                <button>Search Now</button>
+            </form>
+        </div>
+    </section>
+
+    
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/libs.min.js"></script>
