--- a/app/index.html
+++ b/app/index.html
@@ -117,7 +117,51 @@
         </div>
     </section>
 
-    
+    <section class="advantages">
+        <div class="container">
+            <div class="advantages__items">
+                <div class="advantages__item">
+                    <div class="advantages__item-image">
+                        <img src="images/content/advantage-1.jpg" alt="">
+                    </div>
+                    <div class="advantages__item-title">
+                        Best UX Research
+                    </div>
+                    <p class="advantages__item-text">
+                        Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
+                        the mattis, leo quam aliquet diam
+                        congue is laoreet elit metus.
+                    </p>
+                </div>
+                <div class="advantages__item">
+                    <div class="advantages__item-image">
+                        <img src="images/content/advantage-2.jpg" alt="">
+                    </div>
+                    <div class="advantages__item-title">
+                        Fully Responsive
+                    </div>
+                    <p class="advantages__item-text">
+                        Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
+                        the mattis, leo quam aliquet diam
+                        congue is laoreet elit metus.
+                    </p>
+                </div>
+                <div class="advantages__item">
+                    <div class="advantages__item-image">
+                        <img src="images/content/advantage-3.jpg" alt="">
+                    </div>
+                    <div class="advantages__item-title">
+                        Buy & Sell Easily
+                    </div>
+                    <p class="advantages__item-text">
+                        Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
+                        the mattis, leo quam aliquet diam
+                        congue is laoreet elit metus.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
