--- a/app/index.html
+++ b/app/index.html
@@ -128,7 +128,7 @@
                         Best UX Research
                     </div>
                     <p class="advantages__item-text">
-                        Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
+                        Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
                         the mattis, leo quam aliquet diam
                         congue is laoreet elit metus.
                     </p>
@@ -141,7 +141,7 @@
                         Fully Responsive
                     </div>
                     <p class="advantages__item-text">
-                        Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
+                        Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
                         the mattis, leo quam aliquet diam
                         congue is laoreet elit metus.
                     </p>
@@ -154,7 +154,7 @@
                         Buy & Sell Easily
                     </div>
                     <p class="advantages__item-text">
-                        Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque 
+                        Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
                         the mattis, leo quam aliquet diam
                         congue is laoreet elit metus.
                     </p>
@@ -163,10 +163,146 @@
         </div>
     </section>
 
+    <section class="weekly-products">
+        <div class="container">
+            <div class="weekly-products__title title">
+                Weekly Featured Products
+            </div>
+            <div class="weekly-products__slider">
+                <div class="products__slider-inner">
+                    <div class="slider__item">
+                        <a class="slider__item-img" href="#">
+                            <img src="images/content/slider-item.jpg" alt="">
+                        </a>
+                        <div class="slider__item-content">
+                            <div class="slider__item-title">
+                                One Page Resume Template
+                            </div>
+                            <div class="slider__item-info">
+                                <a href="#" class="slider__item-author">
+                                    <span style="background-image: url(images/content/user.jpg);"></span>
+                                    AazzTech
+                                </a>
+                                <a class="slider__item-system" href="#">
+                                    <span style="background-image: url(images/content/wordpress.svg);"></span>
+                                    WordPress
+                                </a>
+                            </div>
+                            <p class="slider__item-text">
+                                Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque the
+                                mattis,
+                                leo quam aliquet congue placerat mi id nisi interdum mollis. Praesent pharetra, justo ut
+                                scelerisque the mattis, leo quam aliquet congue justo ut scelerisque.
+                            </p>
+                            <div class="slider__item-category">
+                                <a href="#">website</a>
+                                <a href="#">plugin</a>
+                                <a href="#">landing page</a>
+                            </div>
+                            <div class="slider__item-rating">
+                                <div class="slider__item-list">
+                                    <a class="money-range" href="#">
+                                        $10 - $50
+                                    </a>
+                                    <span>46</span>
+                                    <a class="slider__item-cart" href="#">634</a>
+                                </div>
+                                <div class="rate-star"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="slider__item">
+                        <a class="slider__item-img" href="#">
+                            <img src="images/content/slider-item.jpg" alt="">
+                        </a>
+                        <div class="slider__item-content">
+                            <div class="slider__item-title">
+                                One Page Resume Template
+                            </div>
+                            <div class="slider__item-info">
+                                <a href="#" class="slider__item-author">
+                                    <span style="background-image: url(images/content/user.jpg);"></span>
+                                    AazzTech
+                                </a>
+                                <a class="slider__item-system" href="#">
+                                    <span style="background-image: url(images/content/wordpress.svg);"></span>
+                                    WordPress
+                                </a>
+                            </div>
+                            <p class="slider__item-text">
+                                Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque the
+                                mattis,
+                                leo quam aliquet congue placerat mi id nisi interdum mollis. Praesent pharetra, justo ut
+                                scelerisque the mattis, leo quam aliquet congue justo ut scelerisque.
+                            </p>
+                            <div class="slider__item-category">
+                                <a href="#">website</a>
+                                <a href="#">plugin</a>
+                                <a href="#">landing page</a>
+                            </div>
+                            <div class="slider__item-rating">
+                                <div class="slider__item-list">
+                                    <a class="money-range" href="#">
+                                        $10 - $50
+                                    </a>
+                                    <span>46</span>
+                                    <a class="slider__item-cart" href="#">634</a>
+                                </div>
+                                <div class="rate-star"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="slider__item">
+                        <a class="slider__item-img" href="#">
+                            <img src="images/content/slider-item.jpg" alt="">
+                        </a>
+                        <div class="slider__item-content">
+                            <div class="slider__item-title">
+                                One Page Resume Template
+                            </div>
+                            <div class="slider__item-info">
+                                <a href="#" class="slider__item-author">
+                                    <span style="background-image: url(images/content/user.jpg);"></span>
+                                    AazzTech
+                                </a>
+                                <a class="slider__item-system" href="#">
+                                    <span style="background-image: url(images/content/wordpress.svg);"></span>
+                                    WordPress
+                                </a>
+                            </div>
+                            <p class="slider__item-text">
+                                Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque the
+                                mattis,
+                                leo quam aliquet congue placerat mi id nisi interdum mollis. Praesent pharetra, justo ut
+                                scelerisque the mattis, leo quam aliquet congue justo ut scelerisque.
+                            </p>
+                            <div class="slider__item-category">
+                                <a href="#">website</a>
+                                <a href="#">plugin</a>
+                                <a href="#">landing page</a>
+                            </div>
+                            <div class="slider__item-rating">
+                                <div class="slider__item-list">
+                                    <a class="money-range" href="#">
+                                        $10 - $50
+                                    </a>
+                                    <span>46</span>
+                                    <a class="slider__item-cart" href="#">634</a>
+                                </div>
+                                <div class="rate-star"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/libs.min.js"></script>
-    <script src="js/main.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
+
